--- a/dotfiles/dotdesktop/specter.desktop
+++ b/dotfiles/dotdesktop/specter.desktop
@@ -4,7 +4,7 @@ Exec=/opt/specter/./Specter.AppImage
 GenericName=Specter Bitcoin Wallet
 Icon=/opt/specter/logo.png
 Name=Specter Bitcoin Wallet
-Categories=Finance;Network;
+Categories=Bitcoin
 StartupNotify=true
 Terminal=false
 Type=Application
